<resources>
    <string name="app_name">Assignment_2</string>
    
    <!--activity_main-->
    <string name="title">DUBAI</string>
    <string name="date">Apr 3, 12 pm - Apr 6, 12pm</string>
    <string name="lbl1">LOWEST PRICE</string>
    <string name="lbl2">DISTANCE</string>
    <string name="lbl3">RECOMMENDED</string>
    <string name="fee">C$31 - C$1,417 per day, incl. taxes and fees</string>
    <string name="lbl">2</string>
    <string name="btn">Select Filters</string>

    <!--recycler_list_item-->
    <string name="price">C$36</string>
    <string name="lbl4">AVIS</string>
    <string name="lbl5">Economy</string>
    <string name="lbl6">Chevrolet Spark</string>
    <string name="lbl7">4</string>
    <string name="lbl8">1</string>
    <string name="lbl9">4</string>
    <string name="lbl10">Apr 3, 12pm</string>
    <string name="lbl11">Apr 6, 12pm</string>
    <string name="lbl12">Pick-up</string>
    <string name="lbl13">Non Airport</string>
    <string name="lbl14">Drop-off</string>

    <!--activity_item_detail-->
    <string name="lbl15">Audi A5</string>
    <string name="lbl16">Luxury Car</string>
    <string name="lbl17">Audi A5 Sportback or similar</string>
    <string name="lbl18">$1,417</string>
    <string name="lbl19">CAD per day,</string>
    <string name="lbl20">incl. taxes and fees</string>
    <string name="btn2">Book</string>
    <string name="lbl21">Offer Details</string>
    <string name="lbl22">Automatic</string>
    <string name="lbl23">Air Conditioning</string>
    <string name="lbl24">Convertable</string>
    <string name="lbl25">In Terminal</string>

</resources>
